<resources>
    <string name="app_name">BCRC</string>

    <!--  TODO: 2018/5/26  添加的String值都放在这里 -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="load_more_footer_hint_normal">点击查看更多</string>
    <string name="load_more_footer_hint_loading">加载中</string>
    <string name="load_more_footer_hint_fully_loaded">没有更多数据</string>

    <!--登陆注册相关-->
    <string name="login">登陆</string>
    <string name="login_with_other_way">其他方式登陆</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="input_psw">请输入密码</string>
    <string name="wrong_form_of_phone_num">手机号格式不正确</string>

    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码</string>

    <string name="register">注册</string>


    <!--个人信息相关-->
    <string name="password">密码</string>
    <string name="phone_number">手机号</string>
    <string name="avatar">头像</string>
    <string name="cellphone">手机号</string>
    <string name="change_password">修改密码</string>


</resources>
