<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:minHeight="@dimen/item_height_3"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_load_more_footer_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:orientation="horizontal">

        <ProgressBar
            android:layout_width="@dimen/icon_3"
            android:layout_height="@dimen/icon_3"
            android:alpha="0.6"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/padding_2"
            android:layout_marginRight="@dimen/padding_2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/load_more_footer_hint_loading"
            android:textColor="@color/md_grey_500"
            android:textSize="@dimen/font_3"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_load_more_footer_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/load_more_footer_hint_normal"
        android:textColor="@color/md_grey_500"
        android:textSize="@dimen/font_3"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_load_more_footer_fully_loaded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/load_more_footer_hint_fully_loaded"
        android:textColor="@color/md_grey_500"
        android:textSize="@dimen/font_3"
        android:visibility="invisible" />

</FrameLayout>