<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">



    <include layout="@layout/header_layout" />

    <RelativeLayout
        android:id="@+id/rl_avatar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_4"
        android:background="@drawable/bg_clickable_white"
        android:minHeight="@dimen/item_height_4"
        android:paddingLeft="@dimen/padding_3"
        android:paddingRight="@dimen/padding_3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/avatar"
            android:textColor="@color/color_text_dark"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/icon_5"
                android:layout_height="@dimen/icon_5"
                android:background="@drawable/ic_contact" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginLeft="12.5dp"
                android:background="@drawable/ic_arrow_light" />
        </LinearLayout>
    </RelativeLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_3"
        android:layout_marginRight="@dimen/padding_3"
        app:srcCompat="@drawable/horizontal" />

    <RelativeLayout
        android:id="@+id/rl_nickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_4"
        android:background="@drawable/bg_clickable_white"
        android:padding="@dimen/padding_3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="昵称"
            android:textColor="@color/color_text_dark"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_light"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_2"
                android:background="@drawable/ic_arrow_light" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_3"
        android:layout_marginRight="@dimen/padding_3"
        app:srcCompat="@drawable/horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_4"
        android:background="@color/color_white"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cellphone"
            android:textColor="@color/color_text_dark"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_light"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_2"
                android:background="@drawable/ic_arrow_light"
                android:visibility="invisible" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_3"
        android:layout_marginRight="@dimen/padding_3"
        app:srcCompat="@drawable/horizontal" />

    <RelativeLayout
        android:id="@+id/rl_password_change"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_4"
        android:background="@drawable/bg_clickable_white"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/change_password"
            android:textColor="@color/color_text_dark"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_arrow_light" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_3"
        android:layout_marginRight="@dimen/padding_3"
        app:srcCompat="@drawable/horizontal" />

    <View
        style="@style/Common.Divider.Horizontal"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/rl_marker_manage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_4"
        android:background="@drawable/bg_clickable_white"

        android:padding="15dp"
        android:visibility="invisible">


    </RelativeLayout>

    <View
        style="@style/Common.Divider.Horizontal"
        android:visibility="invisible" />
</LinearLayout>